Fix spacing of labels; fix scoring criteria spacing

--- a/impschedules/static/style.css
+++ b/impschedules/static/style.css
@@ -76,3 +76,6 @@ color:#ffffff;
 h4 {
     padding-top:4px;
 }
+.table .lead {
+    margin:4px;
+}
